Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2006-03-24 Tim
 PATCH: [ 1457306 ] Revamped Visual Basic syntax highlighter
  Src\editlib: basic.cpp

2006-03-24 Kimmo
 BUG: [ 1455656 ] GPL text still contains 'How to Apply These Terms...'
  Docs/Users: GPL.rtf

2006-03-22 WinMerge experimental release 2.5.3.5 (cvs)

2006-03-22 Kimmo
 PATCH: [ 1455706 ] Catalan translation update
  Submitted by Jordi Vilar
  Src/Languages/Catalan: MergeCatalan.rc
 PATCH: [ 1406944 ] Compute text statistics in QuickCompare
  Src: ByteComparator.cpp ByteComparator.h DiffFileInfo.cpp DiffFileInfo.h DiffWrapper.cpp
   Diffwrapper.h DirScan.cpp DirViewColItems.cpp Merge.dsp Merge.rc resource.h
  Src/diffutils/src: DIFF.H IO.C
  Src/Languages/*: Merge*.rc

2006-03-21 Tim
 PATCH: [ 1455663 ] Add new keywords to Visual Basic highlighter
  Src\editlib: basic.cpp

2006-03-21 Kimmo
 PATCH: [ 1448599 ] WinMerge Program Icon Set
  Submitted by Alexander Skinner
  Src/res: Merge.ico
 PATCH: [ 1452288 ] Add ASP.NET filefilter
  By By Jon Galloway and Josh Blair
  Filters new file: ASPNET.flt
 PATCH: [ 1454720 ] Fix resizable dialogs missing captionbar close button
  Src: Merge.rc
  Src/Languages/*: Merge*.rc
 PATCH: [ 1455430 ] New Splash Screen Revision 2
  Submitted by Alexander Skinner
  Src/res: splash.jpg
 Remove obsolete splashscreen image (for old splashscreen)
  Src/res removed file: WinMergesplash.psd

2006-03-19 Kimmo
 PATCH: [ 1449892 ] Add compare method to configlog
  Src: ConfigLog.cpp ConfigLog.h MainFrm.cpp
 PATCH: [ 1453252 ] Fix closing filecompare after error
  Src: MainFrm.cpp MergeDoc.cpp

2006-03-17 Tim
 PATCH: [ 1449571 ] Add '*.pm' and '*.plx' to Perl highlighter
  Src/editlib: ccrystaleditview.cpp

2006-03-14 Perry
 BUG: [ 1449947 ] Looks like diffutils bug for mac-style
 BUG: [ 1449949 ] crash comparing two simple test mac files
 Fix looping which missed mac case
  diffutils\src: IO.C

2006-03-15 Kimmo